--- a/src/renderer/pages/calendar/frontpage.styles.scss
+++ b/src/renderer/pages/calendar/frontpage.styles.scss
@@ -19,7 +19,7 @@
             display: flex;
             width: 3rem;
             justify-content: space-between;
-            align-self: flex-start;
+            align-self: center;
             padding: .25rem;
             aspect-ratio: 1 / 1;
             span {
