--- a/src/renderer/pages/welcome/getstarted.styles.scss
+++ b/src/renderer/pages/welcome/getstarted.styles.scss
@@ -50,7 +50,7 @@
         }
 
         strong {
-            cursor: inherit;
+            font-weight: 600;
         }
     }
 
@@ -123,7 +123,7 @@
         }
 
         strong {
-            cursor: inherit;
+            font-weight: 600;
         }
     }
 
