general updates pt100

--- a/src/renderer/App.scss
+++ b/src/renderer/App.scss
@@ -14,4 +14,7 @@ body {
 *, *::before, *::after {
   box-sizing: border-box;
   cursor: default;
+  outline: none;
+  font-family: inherit;
+  appearance: none;
 }
