--- a/src/renderer/pages/calendar/frontpage.styles.scss
+++ b/src/renderer/pages/calendar/frontpage.styles.scss
@@ -10,16 +10,16 @@
         box-shadow: inset 0 -2px 0 rgba(0, 0, 0, .1);
         display: flex;
         gap: .5rem;
-        -webkit-app-region: no-drag;
+        -webkit-app-region: drag;
         button {
-            appearance: none;
+            -webkit-app-region: no-drag;
             font-size: inherit;
             font-family: inherit;
             color: inherit;
             border: none;
             border-radius: 4px;
             background-color: transparent;
-            padding: .5rem;
+            padding: .25rem .75rem;
             &:active {
                 background-color: rgba(black, .1);
             }
@@ -51,20 +51,41 @@
             }
         }
     }
+    .next-before-options {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        background-color: #f4f4f4;
+        border-radius: 6px;
+        padding: .5rem;
+        box-shadow: inset 0 2px 0 rgba(0, 0, 0, .1);
+        display: flex;
+        gap: .5rem;
+        -webkit-app-region: drag;
+        button {
+            -webkit-app-region: no-drag;
+            font-size: inherit;
+            font-family: inherit;
+            color: inherit;
+            border: none;
+            border-radius: 4px;
+            background-color: transparent;
+            padding: .25rem .75rem;
+            &:active {
+                background-color: rgba(black, .1);
+            }
+        }
+    }
     .header {
         display: flex;
         justify-content: space-between;
         h1 {
             font-weight: normal;
-            margin: -.5rem;
-            padding: .5rem;
-            border-radius: .25rem;
+            margin: 0;
             div {
                 color: #7c7c7c;
                 font-size: .75em;
-            }
-            &:hover {
-                background-color: #e5e5e5;
             }
         }
         .settings-button {
