--- a/src/renderer/pages/calendar/frontpage.styles.scss
+++ b/src/renderer/pages/calendar/frontpage.styles.scss
@@ -75,6 +75,13 @@
             &:active {
                 background-color: rgba(black, .1);
             }
+            &.selected {
+                box-shadow: inset 0 0 4px rgba(0, 0, 0, .6);
+                background-color: white;
+                &:active {
+                    background-color: rgba(black, .1);
+                }
+            }
         }
     }
     .header {
