--- a/src/renderer/pages/calendar/index.styles.scss
+++ b/src/renderer/pages/calendar/index.styles.scss
@@ -8,7 +8,7 @@
         width: calc(100% - 4rem);
         height: calc(100% - 4rem);
         box-shadow: 0 0 2px 1px rgba(0, 0, 0, .1);
-        padding: 2rem 2rem;
+        padding: 1rem;
         top: 2rem;
         left: 2rem;
         border-radius: .5rem;
