--- a/src/renderer/pages/calendar/display/displaymonth.styles.scss
+++ b/src/renderer/pages/calendar/display/displaymonth.styles.scss
@@ -16,131 +16,136 @@
     grid-template-rows: repeat(6, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    .grid-box-1 {
-      grid-area: 1 / 1 / 2 / 2;
+    .grid-box {
+      &-1 {
+        grid-area: 1 / 1 / 2 / 2;
+      }
+      &-2 {
+        grid-area: 1 / 2 / 2 / 3;
+      }
+      &-3 {
+        grid-area: 1 / 3 / 2 / 4;
+      }
+      &-4 {
+        grid-area: 1 / 4 / 2 / 5;
+      }
+      &-5 {
+        grid-area: 1 / 5 / 2 / 6;
+      }
+      &-6 {
+        grid-area: 1 / 6 / 2 / 7;
+      }
+      &-7 {
+        grid-area: 1 / 7 / 2 / 8;
+      }
+      &-8 {
+        grid-area: 2 / 1 / 3 / 2;
+      }
+      &-9 {
+        grid-area: 2 / 2 / 3 / 3;
+      }
+      &-10 {
+        grid-area: 2 / 3 / 3 / 4;
+      }
+      &-11 {
+        grid-area: 2 / 4 / 3 / 5;
+      }
+      &-12 {
+        grid-area: 2 / 5 / 3 / 6;
+      }
+      &-13 {
+        grid-area: 2 / 6 / 3 / 7;
+      }
+      &-14 {
+        grid-area: 2 / 7 / 3 / 8;
+      }
+      &-15 {
+        grid-area: 3 / 1 / 4 / 2;
+      }
+      &-16 {
+        grid-area: 3 / 2 / 4 / 3;
+      }
+      &-17 {
+        grid-area: 3 / 3 / 4 / 4;
+      }
+      &-18 {
+        grid-area: 3 / 4 / 4 / 5;
+      }
+      &-19 {
+        grid-area: 3 / 5 / 4 / 6;
+      }
+      &-20 {
+        grid-area: 3 / 6 / 4 / 7;
+      }
+      &-21 {
+        grid-area: 3 / 7 / 4 / 8;
+      }
+      &-22 {
+        grid-area: 4 / 1 / 5 / 2;
+      }
+      &-23 {
+        grid-area: 4 / 2 / 5 / 3;
+      }
+      &-24 {
+        grid-area: 4 / 3 / 5 / 4;
+      }
+      &-25 {
+        grid-area: 4 / 4 / 5 / 5;
+      }
+      &-26 {
+        grid-area: 4 / 5 / 5 / 6;
+      }
+      &-27 {
+        grid-area: 4 / 6 / 5 / 7;
+      }
+      &-28 {
+        grid-area: 4 / 7 / 5 / 8;
+      }
+      &-29 {
+        grid-area: 5 / 1 / 6 / 2;
+      }
+      &-30 {
+        grid-area: 5 / 2 / 6 / 3;
+      }
+      &-31 {
+        grid-area: 5 / 3 / 6 / 4;
+      }
+      &-32 {
+        grid-area: 5 / 4 / 6 / 5;
+      }
+      &-33 {
+        grid-area: 5 / 5 / 6 / 6;
+      }
+      &-34 {
+        grid-area: 5 / 6 / 6 / 7;
+      }
+      &-35 {
+        grid-area: 5 / 7 / 6 / 8;
+      }
+      &-36 {
+        grid-area: 6 / 1 / 7 / 2;
+      }
+      &-37 {
+        grid-area: 6 / 2 / 7 / 3;
+      }
+      &-38 {
+        grid-area: 6 / 3 / 7 / 4;
+      }
+      &-39 {
+        grid-area: 6 / 4 / 7 / 5;
+      }
+      &-40 {
+        grid-area: 6 / 5 / 7 / 6;
+      }
+      &-41 {
+        grid-area: 6 / 6 / 7 / 7;
+      }
+      &-42 {
+        grid-area: 6 / 7 / 7 / 8;
+      }
     }
-    .grid-box-2 {
-      grid-area: 1 / 2 / 2 / 3;
-    }
-    .grid-box-3 {
-      grid-area: 1 / 3 / 2 / 4;
-    }
-    .grid-box-4 {
-      grid-area: 1 / 4 / 2 / 5;
-    }
-    .grid-box-5 {
-      grid-area: 1 / 5 / 2 / 6;
-    }
-    .grid-box-6 {
-      grid-area: 1 / 6 / 2 / 7;
-    }
-    .grid-box-7 {
-      grid-area: 1 / 7 / 2 / 8;
-    }
-    .grid-box-8 {
-      grid-area: 2 / 1 / 3 / 2;
-    }
-    .grid-box-9 {
-      grid-area: 2 / 2 / 3 / 3;
-    }
-    .grid-box-10 {
-      grid-area: 2 / 3 / 3 / 4;
-    }
-    .grid-box-11 {
-      grid-area: 2 / 4 / 3 / 5;
-    }
-    .grid-box-12 {
-      grid-area: 2 / 5 / 3 / 6;
-    }
-    .grid-box-13 {
-      grid-area: 2 / 6 / 3 / 7;
-    }
-    .grid-box-14 {
-      grid-area: 2 / 7 / 3 / 8;
-    }
-    .grid-box-15 {
-      grid-area: 3 / 1 / 4 / 2;
-    }
-    .grid-box-16 {
-      grid-area: 3 / 2 / 4 / 3;
-    }
-    .grid-box-17 {
-      grid-area: 3 / 3 / 4 / 4;
-    }
-    .grid-box-18 {
-      grid-area: 3 / 4 / 4 / 5;
-    }
-    .grid-box-19 {
-      grid-area: 3 / 5 / 4 / 6;
-    }
-    .grid-box-20 {
-      grid-area: 3 / 6 / 4 / 7;
-    }
-    .grid-box-21 {
-      grid-area: 3 / 7 / 4 / 8;
-    }
-    .grid-box-22 {
-      grid-area: 4 / 1 / 5 / 2;
-    }
-    .grid-box-23 {
-      grid-area: 4 / 2 / 5 / 3;
-    }
-    .grid-box-24 {
-      grid-area: 4 / 3 / 5 / 4;
-    }
-    .grid-box-25 {
-      grid-area: 4 / 4 / 5 / 5;
-    }
-    .grid-box-26 {
-      grid-area: 4 / 5 / 5 / 6;
-    }
-    .grid-box-27 {
-      grid-area: 4 / 6 / 5 / 7;
-    }
-    .grid-box-28 {
-      grid-area: 4 / 7 / 5 / 8;
-    }
-    .grid-box-29 {
-      grid-area: 5 / 1 / 6 / 2;
-    }
-    .grid-box-30 {
-      grid-area: 5 / 2 / 6 / 3;
-    }
-    .grid-box-31 {
-      grid-area: 5 / 3 / 6 / 4;
-    }
-    .grid-box-32 {
-      grid-area: 5 / 4 / 6 / 5;
-    }
-    .grid-box-33 {
-      grid-area: 5 / 5 / 6 / 6;
-    }
-    .grid-box-34 {
-      grid-area: 5 / 6 / 6 / 7;
-    }
-    .grid-box-35 {
-      grid-area: 5 / 7 / 6 / 8;
-    }
-    .grid-box-36 {
-      grid-area: 6 / 1 / 7 / 2;
-    }
-    .grid-box-37 {
-      grid-area: 6 / 2 / 7 / 3;
-    }
-    .grid-box-38 {
-      grid-area: 6 / 3 / 7 / 4;
-    }
-    .grid-box-39 {
-      grid-area: 6 / 4 / 7 / 5;
-    }
-    .grid-box-40 {
-      grid-area: 6 / 5 / 7 / 6;
-    }
-    .grid-box-41 {
-      grid-area: 6 / 6 / 7 / 7;
-    }
-    .grid-box-42 {
-      grid-area: 6 / 7 / 7 / 8;
+    .not-this-month {
+      color: #b9b9b9;
     }
   }
 }
