--- a/src/renderer/pages/calendar/display/displaymonth.styles.scss
+++ b/src/renderer/pages/calendar/display/displaymonth.styles.scss
@@ -25,7 +25,7 @@ $border-color: #d8d8d8;
       padding: 0.5rem;
     }
     .not-this-month {
-      color: #b9b9b9;
+      color: #d8d8d8;
     }
     .first-day {
       .day {
