--- a/src/renderer/pages/calendar/display/displayday.styles.scss
+++ b/src/renderer/pages/calendar/display/displayday.styles.scss
@@ -25,14 +25,13 @@ $height: 1820px;
         flex: 1;
         display: flex;
         flex-direction: column;
-        background-color: #d0d0d0;
         gap: 1px;
         border-top: 1px solid #d0d0d0;
         border-bottom: 1px solid #d0d0d0;
         position: relative;
         .individual-event {
             flex: 1;
-            background-color: white;
+            box-shadow: 0 1px 0 #d0d0d0;
         }
         .exact-current-time {
             position: absolute;
