--- a/src/renderer/pages/calendar/index.styles.scss
+++ b/src/renderer/pages/calendar/index.styles.scss
@@ -5,14 +5,14 @@
     -webkit-app-region: drag;
     .inside {
         position: absolute;
-        width: calc(100% - 4rem);
-        height: calc(100% - 4rem);
-        box-shadow: 0 0 2px 1px rgba(0, 0, 0, .1);
+        width: calc(100% - 1rem);
+        height: calc(100% - 5rem);
         padding: 1rem;
-        top: 2rem;
-        left: 2rem;
+        top: 2.5rem;
+        left: .5rem;
         border-radius: .5rem;
         background-color: white;
+        //box-shadow: 0 0 6px rgba(black, .1);
         -webkit-app-region: no-drag;
     }
 }
