--- a/src/renderer/pages/welcome/getstarted.styles.scss
+++ b/src/renderer/pages/welcome/getstarted.styles.scss
@@ -18,12 +18,17 @@
 
     h2 {
         font-weight: normal;
-        font-size: 3rem;
+        font-size: 2.5rem;
+        margin-bottom: 0;
     }
 
     h3 {
         font-weight: normal;
         font-size: 2rem;
+        &.desc {
+            font-size: 1.5rem;
+            margin: 0;
+        }
     }
 
     span.option {
