--- a/src/renderer/components/addeventmodal.styles.scss
+++ b/src/renderer/components/addeventmodal.styles.scss
@@ -11,9 +11,9 @@
     align-items: center;
     .add-event-container {
         background-color: white;
-        width: 400px;
         border-radius: 6px;
         padding: 1rem;
+        min-width: 20rem;
         display: flex;
         flex-direction: column;
         h2 {
@@ -32,7 +32,7 @@
                 }
             }
         }
-        input {
+        input, textarea {
             appearance: none;
             border: none;
             font: inherit;
@@ -53,14 +53,18 @@
         input.title {
             font-size: 1.25rem;
         }
-        input.description {
+        textarea.description {
             font-size: 1rem;
+            resize: none;
+            height: 5rem;
         }
-        .choose-date-and-time {
-            display: flex;
-            .cal-flex {
-                flex: 1;
-            }
+    }
+
+    .cal-flex {
+    justify-content: space-between;
+    display: flex;
+        & *:focus {
+            color: green;
         }
     }
 }
