--- a/src/renderer/pages/calendar/display/displayday.styles.scss
+++ b/src/renderer/pages/calendar/display/displayday.styles.scss
@@ -6,7 +6,8 @@ $height: 1820px;
     overflow-y: auto;
     display: flex;
     .hourly-box {
-        height: $height;
+        height: 100%;
+        min-height: $height;
         width: 5rem;
         padding-right: 1rem;
         display: flex;
@@ -21,7 +22,8 @@ $height: 1820px;
         }
     }
     .hourly-event-box {
-        height: $height;
+        height: 100%;
+        min-height: $height;
         flex: 1;
         display: flex;
         flex-direction: column;
@@ -36,10 +38,17 @@ $height: 1820px;
             flex-direction: column;
             .quarterly-gap {
                 flex: 1;
-                &:hover {
-                    background-color: red;
-                }
             }
+        }
+        .event {
+            position: absolute;
+            color: white;
+            background-color: red;
+            border-radius: 5px;
+            padding: .25rem;
+            width: 100%;
+            font-size: .75rem;
+            cursor: pointer;
         }
         .exact-current-time {
             position: absolute;
@@ -60,6 +69,37 @@ $height: 1820px;
                 left: -9px;
                 top: 50%;
                 transform: translateY(-50%);
+            }
+        }
+    }
+    .all-day-events-container {
+        display: none; //remove once it's ready to be implemented
+        position: fixed;
+        width: 100%;
+        left: 0;
+        background-color: rgba(rgb(29, 110, 209), .4);
+        transform: translateY(-50%);
+        z-index: 1;
+        backdrop-filter: blur(5px);
+        .inside {
+            display: flex;
+            padding: .25rem 1.5rem;
+            & > .label {
+                width: 5rem;
+                text-align: right;
+                padding-right: 1rem;
+                align-self: center;
+            }
+            & > .all-day-display {
+                flex: 1;
+                display: flex;
+                gap: .25rem;
+                & > .event {
+                    flex: 1;
+                    background-color: rgba(255, 255, 255, 0.6);
+                    border-radius: 5px;
+                    padding: .25rem;
+                }
             }
         }
     }
