--- a/src/renderer/pages/calendar/frontpage.styles.scss
+++ b/src/renderer/pages/calendar/frontpage.styles.scss
@@ -17,9 +17,10 @@
             font-family: inherit;
             color: inherit;
             border: none;
-            border-radius: 5px;
+            border-radius: 6px;
             background-color: transparent;
             padding: .25rem .75rem;
+            border: 1px solid transparent;
             &:active {
                 background-color: rgba(black, .1);
             }
@@ -27,15 +28,16 @@
                 color: white;
                 position: relative;
                 overflow: hidden;
-                box-shadow: inset 0 4px 3px 0 rgba(255, 255, 255, 0.3), inset 0 -4px 8px 0 rgba(0, 0, 0, 0.2);
+                border-color: rgba(0, 0, 0, 0.2);
+                box-shadow: inset 0 2px 0 rgba(white, .3);
                 &.day {
-                    background-color: #3b9cc9;
+                    background-color: #57be2b;
                 }
                 &.week {
                     background-color: #d25700;
                 }
                 &.month {
-                    background-color: #57be2b;
+                    background-color: #3b9cc9;
                 }
                 &.year {
                     background-color: #be2ba5;
